src/styles/main.css
:root {
  --orange-color: #f9921d;
  --grey-color: #86827c;
}
.text-orange {
  color: var(--orange-color);
}

.text-grey {
  color: var(--grey-color);
}

#hero-image-container {
  position: relative;
}
#dotted-box {
  position: absolute;
  top: -45px;
  right: -20px;
  z-index: -1;
}
#hero-image {
  margin-right: 50px;
  margin-top: 15px;
  z-index: 1;
}

#orange-box {
  position: absolute;
  right: 40px;
  bottom: -10px;
  z-index: -2;
}

#orange-box2 {
  position: absolute;
  top: -10px;
  left: -10px;
  z-index: -3;
}

.navigation-link:hover {
  background-color: var(--orange-color);
}

.orange-btn:hover {
  background-color: var(--grey-color) !important;
}

#about-description {
  border-left: 5px solid var(--orange-color);
  padding-left: 15px;
}
#about-image {
  @media only screen and (min-width: 769px) {
    position: relative;
    top: -220px;
  }
}

@media only screen and (max-width: 769px) {
  #hero-image-container {
    margin-left: 10px;
  }
}

.service-card {
  @media only screen and (min-width: 769px) {
    height: 450px;
  } 
}

/* #services {
  @media only screen and (min-width: 769px) {
    position: relative;
  } 
} */

.testimonial-header-image {
  width: 100%;
}

.testimonial-form-par {
  background: var(--orange-color);
}

/* .slick-slide {
  margin: 0 27px;
}

/* the parent */
/* .slick-list {
  margin: 0 -27px;
} */
.slick-arrow {
  text-shadow: 0px 0px 1px #00000052;
  scale: 4;
  top: 60% !important;
  z-index: 1;
  @media (max-width: 769px) {
    scale: 2 !important;
  }
}
.slick-center {
  filter: blur(0px) !important;
  position: relative;
  scale: 1.1 !important;
  z-index: 10;
  transition: all 0.3s ease-in-out;
  @media (max-width: 769px) {
    scale: 0 !important;
    .testimonial {
      min-width: 100% !important;
    }
  }
}
.slick-slide {
  filter: blur(1px) grayscale(1);
  scale: 0.8;
  transition: all 0.3s ease-in-out;
  @media (max-width: 769px) {
    filter: blur(0px) !important;
  }
}

.slick-center .testimonial {
  min-width: 400px;
  z-index: 100;
  .card-header {
    background-color: var(--orange-color) !important;
    color: #fff;
  }
}

.testimonial {
  .card-body {
    min-height: 250px;
  }
}

